fix mandatees not showing the changes between agendas

--- a/app/components/agenda/compare-agenda-list.hbs
+++ b/app/components/agenda/compare-agenda-list.hbs
@@ -41,7 +41,7 @@
                 {{!-- TODO: these triple curlies are used for displaying a computed string with br tags in it.
                 These items concatenated by <br> should become a list that is iterated over in a .hbs template --}}
                 {{!-- template-lint-disable no-triple-curlies  --}}
-                {{{combinedAgendaitem.groupName}}}
+                {{{combinedAgendaitem.left.groupName}}}
                 {{!-- template-lint-enable no-triple-curlies  --}}
               </div>
             </div>
@@ -50,7 +50,7 @@
                 {{!-- TODO: these triple curlies are used for displaying a computed string with br tags in it.
                 These items concatenated by <br> should become a list that is iterated over in a .hbs template --}}
                 {{!-- template-lint-disable no-triple-curlies  --}}
-                {{{combinedAgendaitem.groupName}}}
+                {{{combinedAgendaitem.right.groupName}}}
                 {{!-- template-lint-enable no-triple-curlies  --}}
               </div>
             </div>
