feat: remove deleteDocumentContainerWithUndo from file service

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -1,5 +1,5 @@
 <div
-  class="vlc-document-card {{if (not this.bordered) 'vlc-document-card--borderless'}} {{if this.documentContainer.aboutToDelete 'vlc-document--deleted-state'}}"
+  class="vlc-document-card {{if (not this.bordered) 'vlc-document-card--borderless'}} {{if this.deleteDocumentContainerWithUndo.isRunning 'vlc-document--deleted-state'}}"
   {{did-update (perform this.loadPieceRelatedData) @piece}}
   {{did-update (perform this.loadPieceRelatedData) @documentContainer}}
   data-test-document-card
