KAS-3744 Fix spacing issue on form-help-text instance

--- a/app/components/auk/datepicker.hbs
+++ b/app/components/auk/datepicker.hbs
@@ -1,5 +1,5 @@
 <div
-  class="{{@class}} {{if @enableClear "auk-input-with-clear-action"}}"
+  class="auk-datepicker {{@class}} {{if @enableClear "auk-input-with-clear-action"}}"
   {{did-update this.updateEnable this.enable}}
 >
   <span class="au-c-input-wrapper au-c-input-wrapper--left auk-u-block auk-u-maximize-width">
