KAS-3708 Revert temporary block lists back to checkbox list component & fix small spacing issue

--- a/app/components/publications/overview/publications-table-display-config-modal.hbs
+++ b/app/components/publications/overview/publications-table-display-config-modal.hbs
@@ -25,8 +25,8 @@
 </div>
 <div class="auk-popover__body">
   {{#each this.optionColumns as |column|}}
-    {{#each column as |option|}}
-      <div>
+    <Auk::CheckboxList>
+      {{#each column as |option|}}
         <AuControlCheckbox
           data-test-overview-table-display-config-option-checkbox={{option.keyName}}
           @checked={{includes option @tableConfig.visibleColumns}}
@@ -45,8 +45,8 @@
             {{/if}}
           </span>
         </AuControlCheckbox>
-      </div>
-    {{/each}}
+      {{/each}}
+    </Auk::CheckboxList>
   {{/each}}
   <AuButton
     class="auk-u-mt-2"
