fix: make relation between news-item and agenda-item-treatment one-to-one

--- a/app/templates/newsletter/index.hbs
+++ b/app/templates/newsletter/index.hbs
@@ -39,7 +39,7 @@
           <NewsletterItem::TableRow
             @agendaitem={{item.agendaitem}}
             @newsletterItem={{item.newsletterItem}}
-            @onSave={{fn (perform this.saveNewsletterItem) item.agendaitem}}
+            @onSave={{perform this.saveNewsletterItem}}
           />
         {{/each}}
       </tbody>
