KAS-3669 fix concurrency issue on newsItem create and edits
When creating, immediately save the model. When opening the views, force concurrency check, when saving or canceling we have to refresh the model and route if the newsItem was new

--- a/app/templates/newsletter/index.hbs
+++ b/app/templates/newsletter/index.hbs
@@ -40,6 +40,7 @@
             @agendaitem={{item.agendaitem}}
             @newsletterItem={{item.newsletterItem}}
             @onSave={{perform this.saveNewsletterItem}}
+            @onCancel={{this.cancelEdit}}
           />
         {{/each}}
       </tbody>
