fix: use sortale-handle modifier to choose the drag-handle
Previously we used the icon class for the 6 dots. But since we're using
AppUniversum icons now, the classes don't match. In any case, using the
modifier should be somewhat more robust, although ideally we would
extract the drag handle from the component so we can never
"accidentally" lose it.

--- a/app/components/agenda/agenda-overview/agenda-overview-item.hbs
+++ b/app/components/agenda/agenda-overview/agenda-overview-item.hbs
@@ -14,7 +14,7 @@
   <div data-test-agenda-overview-item-container class="vlc-agenda-items__body">
     <h4 class="vlc-agenda-items__subject">
       {{#if @showDragHandle}}
-        <div class="vlc-agenda-items__cursor">
+        <div class="vlc-agenda-items__cursor" {{sortable-handle}}>
           <AuIcon
             data-test-agenda-overview-item-dragging
             class="auk-u-cursor-grab auk-u-text-muted"
