fix: extract editing state from agenda-overview component
This allows us to reorder agendaitems as often as we want without having
the edit state reset every time.

--- a/app/components/agenda/agenda-overview.hbs
+++ b/app/components/agenda/agenda-overview.hbs
@@ -1,9 +1,9 @@
 <div class="vlc-agenda-items auk-u-m-8">
-  {{#if this.isEditingOverview}}
+  {{#if @isEditingOverview}}
     <ChangesAlert
       @message={{t "editing-agenda-overview"}}
       @buttonText={{t "end-editing-overview"}}
-      @clearAction={{this.toggleIsEditingOverview}}
+      @clearAction={{@toggleIsEditingOverview}}
     />
   {{/if}}
   <Auk::Toolbar @auto={{true}} class="auk-u-mb-3">
@@ -28,12 +28,12 @@
             {{if @showModifiedOnly (t "show-all") (t "show-changes")}}
           </AuButton>
           {{#if this.canEdit}}
-            {{#unless this.isEditingOverview}}
+            {{#unless @isEditingOverview}}
               <AuButton
                 data-test-agenda-overview-formally-ok-edit={{true}}
                 @skin="naked"
                 @icon="pencil"
-                {{on "click" this.toggleIsEditingOverview}}
+                {{on "click" @toggleIsEditingOverview}}
               >
                 {{t "edit"}}
               </AuButton>
@@ -75,7 +75,7 @@
                   @previousAgenda={{@previousAgenda}}
                   @isNew={{includes agendaitem @newItems}}
                   @showFormallyOkStatus={{@currentAgenda.status.isDesignAgenda}}
-                  @isEditingFormallyOkStatus={{this.isEditingOverview}}
+                  @isEditingFormallyOkStatus={{@isEditingOverview}}
                   @showDragHandle={{this.canDragAgendaitems}}
                 />
               </li>
@@ -115,7 +115,7 @@
               @previousAgenda={{@previousAgenda}}
               @isNew={{includes announcement @newItems}}
               @showFormallyOkStatus={{@currentAgenda.status.isDesignAgenda}}
-              @isEditingFormallyOkStatus={{this.isEditingOverview}}
+              @isEditingFormallyOkStatus={{@isEditingOverview}}
               @showDragHandle={{this.canDragAgendaitems}}
             />
           </li>
