chore: replace usage of OVO-code with more generic organization ID

--- a/app/components/organization-filter.hbs
+++ b/app/components/organization-filter.hbs
@@ -3,9 +3,9 @@
   <div class="au-u-1-1">
     <PowerSelect
       data-test-settings-organization-filter
-      @placeholder={{t "ovo-or-organization"}}
+      @placeholder={{t "id-or-organization"}}
       @search={{perform this.search}}
-      @searchMessage={{t "ovo-or-organization"}}
+      @searchMessage={{t "id-or-organization"}}
       @searchEnabled={{true}}
       @noMatchesMessage={{t "no-results-found"}}
       @loadingMessage={{t "please-be-patient"}}
