--- a/app/templates/settings/users/user.hbs
+++ b/app/templates/settings/users/user.hbs
@@ -90,7 +90,7 @@
               <:header>
                 <tr>
                   <th>{{capitalize (t "organization")}}</th>
-                  <th>{{t "ovo-code"}}</th>
+                  <th>{{t "organization-id"}}</th>
                   <th>{{capitalize (t "group")}}</th>
                   <th></th>
                 </tr>
