Fix typo in Plausible action category name

--- a/app/templates/agenda/agendaitems/agendaitem.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem.hbs
@@ -17,7 +17,7 @@
         <Auk::Tab
           @route="agenda.agendaitems.agendaitem.decisions"
           data-test-agendaitem-nav-decision-tab
-          {{plausible-click "Actie" category="Beslissingfiche van agendapunt opvragen"}}
+          {{plausible-click "Actie" category="Beslissingsfiche van agendapunt opvragen"}}
         >
           {{capitalize (t "decision")}}
         </Auk::Tab>
