--- a/app/components/mandatees/mandatees-panel/mandatees-panel-edit.hbs
+++ b/app/components/mandatees/mandatees-panel/mandatees-panel-edit.hbs
@@ -79,12 +79,14 @@
       </Auk::Toolbar::Group>
       <Auk::Toolbar::Group @position="right">
         <Auk::Toolbar::Item>
-          <WebComponents::VlSaveButton
-            data-test-mandatee-panel-edit-save={{true}}
-            @text={{t "save"}}
-            @isLoading={{this.save.isRunning}}
-            @saveAction={{perform this.save}}
-          />
+          <AuButton
+            data-test-mandatee-panel-edit-save
+            @skin="primary"
+            @loading={{this.save.isRunning}}
+            {{on "click" (perform this.save)}}
+          >
+            {{t "save"}}
+          </AuButton>
         </Auk::Toolbar::Item>
       </Auk::Toolbar::Group>
     </Auk::Toolbar>
