Remove manual route
Manual is hosted as static file by backend and reachable via dispatcher

--- a/app/components/m-header.hbs
+++ b/app/components/m-header.hbs
@@ -78,13 +78,13 @@
           @icon="circle-question"
           @iconAlignment="left"
         >
-          <AuLink
-            @route="manual"
+          <AuLinkExternal
+            href="/handleiding"
             role="menuitem"
             target="_blank"
           >
             {{t "look-at-documentation"}}
-          </AuLink>
+          </AuLinkExternal>
           <AuHr />
           <AuLink
             href="mailto:kaleidos.servicedesk@vlaanderen.be"
