--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -194,15 +194,14 @@ $au-button-height: 3.4rem;
   }
 }
 
-.au-c-button,
-.au-c-link {
+.au-c-button {
   vertical-align: middle;
 }
 
 .au-c-button--link,
 .au-c-button--tertiary,
-.au-c-link {
-  font-size: $au-button-font-size;
+.au-c-button--link-secondary {
+  vertical-align: baseline;
 }
 
 .au-c-icon {
