--- a/app/styles/auk/_auk-additions.scss
+++ b/app/styles/auk/_auk-additions.scss
@@ -373,3 +373,9 @@ table tr.lt-expanded-row {
     }
   }
 }
+
+// Alignment helpers
+
+.auk-u-text-vertical-align-middle {
+  vertical-align: middle;
+}
