--- a/app/templates/search/agenda-items.hbs
+++ b/app/templates/search/agenda-items.hbs
@@ -19,7 +19,7 @@
               <AuNavigationLink
                 @route="search.agenda-items"
               >
-                Agendapunt
+                Agenda
               </AuNavigationLink>
             </li>
           </ul>
