KAS-3800 Fix code sample issue for checkbox-tree component within styleguide

--- a/app/templates/styleguide/checkbox-tree.hbs
+++ b/app/templates/styleguide/checkbox-tree.hbs
@@ -3,8 +3,8 @@
 
 <StyleguideSample
         @title="Default"
-        @snippet="default.hbs">
-  {{!-- BEGIN-SNIPPET default --}}
+        @snippet="checkbox-tree.hbs">
+  {{!-- BEGIN-SNIPPET checkbox-tree --}}
   <Auk::CheckboxTree
     @label="Label"
     @items={{this.sampleItems}}
